# butterpack

./: CMakeLists.txt  LICENSE  README.md  butterpack.cpp  main.cpp
include/: butterpack.hpp  butterpack_codec.hpp
src/: butterpack.cpp  butterpack_codec.cpp  main.cpp
